Add theoretical analysis on Monte Carlo policy evaluation
Added detailed markdown explanations addressing the impact of exploration strategies, importance sampling ratios, and policy types (soft vs deterministic) on the accuracy, stability, and efficiency of Monte Carlo methods. These additions provide theoretical context for understanding the trade-offs in policy evaluation and learning.

Co-Authored-By: Ángel Castellanos <77862762+angelcast2002@users.noreply.github.com>
Co-Authored-By: Diego Alejandro Morales Escobaar <77738746+Diego2250@users.noreply.github.com>

--- a/LAB04.ipynb
+++ b/LAB04.ipynb
@@ -10,6 +10,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7526f652",
+   "metadata": {},
+   "source": [
+    "1. ¿Cómo afecta la elección de la estrategia de exploración (exploring starts vs soft policy) a la precisión de la evaluación de políticas en los métodos de Monte Carlo?\n",
+    "- Considere la posibilidad de comparar el desempeño de las políticas evaluadas con y sin explorar los inicios o con diferentes niveles de exploración en políticas blandas.\n",
+    "\n",
+    "La elección entre exploring starts y soft policy influye significativamente en la precisión de la evaluación de políticas en los métodos de Monte Carlo. Exploring starts garantiza que todos los estados y acciones sean explorados al menos una vez, lo que permite una cobertura más completa del espacio de decisiones. Esto resulta en estimaciones más precisas del valor de las políticas, especialmente en entornos donde ciertas acciones podrían no ser seleccionadas naturalmente bajo una política determinada. Sin embargo, este enfoque puede ser poco práctico en escenarios reales, ya que requiere control total sobre el estado inicial y la acción inicial, lo cual no siempre es factible.\n",
+    "\n",
+    "Por otro lado, las soft policies, como las estrategias ε-greedy, introducen aleatoriedad en la selección de acciones, permitiendo que se exploren acciones subóptimas con cierta probabilidad. Esto mejora la cobertura del espacio de estados y acciones sin necesidad de manipular directamente los inicios, lo que las hace más aplicables en entornos reales. No obstante, el nivel de exploración debe ser cuidadosamente ajustado: una política demasiado blanda puede ralentizar la convergencia al introducir ruido excesivo, mientras que una política demasiado rígida puede limitar la exploración y sesgar la evaluación. En resumen, ambas estrategias buscan mejorar la precisión de la evaluación, pero lo hacen con diferentes compromisos entre control, aplicabilidad y eficiencia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57a1f58a",
+   "metadata": {},
+   "source": [
+    "2. En el contexto del aprendizaje de Monte Carlo fuera de la póliza, ¿cómo afecta la razón de muestreo de importancia a la convergencia de la evaluación de políticas? Explore cómo la razón de muestreo de importancia afecta la estabilidad y la convergencia.\n",
+    "\n",
+    "En el aprendizaje de Monte Carlo off-policy, la razón de muestreo de importancia ajusta las estimaciones de valor para compensar la diferencia entre la política de comportamiento y la política objetivo, permitiendo evaluar esta última con datos generados por la primera. Aunque es fundamental para la validez del enfoque off-policy, su uso puede introducir alta varianza cuando las políticas difieren significativamente, lo que afecta negativamente la estabilidad y la convergencia del aprendizaje. Para contrarrestar esto, se emplean técnicas como el muestreo de importancia ponderado, que reduce la varianza a costa de introducir sesgo, mejorando la estabilidad general. En conjunto, el impacto de la razón de muestreo depende de la proximidad entre las políticas y del método de ajuste utilizado, siendo clave para lograr una evaluación precisa y eficiente\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f080d3d5",
+   "metadata": {},
+   "source": [
+    "3. ¿Cómo puede el uso de una soft policy influir en la eficacia del aprendizaje de políticas óptimas en comparación con las políticas deterministas en los métodos de Monte Carlo? Compare el desempeño y los resultados de aprendizaje de las políticas derivadas de estrategias ε-greedy con las derivadas de políticas deterministas.\n",
+    "\n",
+    "Las *soft policies*, como *ε-greedy*, mejoran el aprendizaje en Monte Carlo al permitir exploración continua, evitando que el agente se estanque en decisiones subóptimas. A diferencia de las políticas deterministas, fomentan la búsqueda de mejores acciones a largo plazo, lo que puede acelerar la convergencia hacia una política óptima. Sin embargo, si la exploración es excesiva, puede introducir ruido y ralentizar el proceso.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c790d12e",
+   "metadata": {},
+   "source": [
+    "4. ¿Cuáles son los posibles beneficios y desventajas de utilizar métodos de Monte Carlo off-policy en comparación con los on-policy en términos de eficiencia de la muestra, costo computacional, y velocidad de aprendizaje?\n",
+    "\n",
+    "\n",
+    "Los métodos de Monte Carlo *off-policy* ofrecen mayor flexibilidad al permitir el uso de datos generados por distintas políticas, lo que mejora la eficiencia de muestra y facilita el reaprovechamiento de experiencias. Sin embargo, esto puede aumentar la varianza y requerir técnicas como el muestreo de importancia, elevando el costo computacional y afectando la estabilidad. En contraste, los métodos *on-policy* suelen ser más estables y directos, pero requieren generar nuevas muestras para cada evaluación, lo que puede ser más lento y menos eficiente en entornos complejos.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e40cf06f",
    "metadata": {},
    "source": [
